added principal type (User)
